# alfi_rms

./: README.md  pyproject.toml  restaurant.db
src/api/: main.py
src/api/routers/: __init__.py  auth.py  menu.py  order.py  payment.py  reservation.py  table.py  tables.py
src/auth/: cognito.py  config.py
src/gateways/database/: init_db.py  models.py  seed.py  utils.py
src/schemas/: employee.py  inventory.py  menu.py  order.py  payment.py  recipe.py  reservation.py  table.py
src/services/: base.py  employee.py  inventory.py  menu.py  order.py  payment.py  reservation.py  table.py
tests/integration/: test_cognito.py
