[project]
name = "alfi-rms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "isort>=6.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.34.69",
    "fastapi-cognito>=0.3.0",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "pytest>=8.0.0",
]
